# task-controller

./: .gitignore  .gitmodules
hardware/task-controller/: Power.kicad_sch  bom.ods  button_matrix.kicad_sch  fp-lib-table  graphics.kicad_sch  mounting.kicad_sch  peripherals.kicad_sch  place_footprints.ini  task-controller.kicad_pcb  task-controller.kicad_pro  task-controller.kicad_sch  untitled.kicad_sch  user_interface.kicad_sch
hardware/task-controller/production/: netlist.ipc  task-controller-B_Cu.gbr  task-controller-B_Mask.gbr  task-controller-B_Paste.gbr  task-controller-B_Silkscreen.gbr  task-controller-Edge_Cuts.gbr  task-controller-F_Cu.gbr  task-controller-F_Mask.gbr  task-controller-F_Paste.gbr  task-controller-In1_Cu.gbr  task-controller-In2_Cu.gbr  task-controller-job.gbrjob
software/: CMakeLists.txt  chore.cpp  chore.hpp  chore_board_hw.h  config.h  data_structures.h  dll.hpp  dll.tpp  main.cpp  settings.cpp  settings.hpp
